Thesis: started section 5.5 on the concrete correctness proofs.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -805,7 +805,7 @@ Another application of the inductive domain method, even more general than repre
 
 We now proceed to prove termination of the new quicksort template. The perfect (and, in some sense, the only) way to do this is \textit{well-founded induction}. A relation on type \m{A} is well-founded if all elements of \m{A} are accessible and an element of \m{A} is accessible if all elements below it are accessible. Well-founded induction is then just structural induction on the proof of accessibility of an element of \m{A}. And conversely, structural induction is nothing more than just well-founded induction with the well-founded relation being ``is a subterm of''. This is why well-founded induction and structural induction are, in a sense, equivalent.
 
-In classical mathematics well-founded induction also goes by the names of \textit{strong induction}, \textit{complete induction}, \textit{Noetherian induction} and many others. There it is defined in one of two ways: the first definition states that a relation is well-founded when it has no descending chains; the second says a relation on \m{A} is well-founded when all subsets of \m{A} have a minimal element. Classically these definitions are equivalent and equivalent to the definition given in the main text, but from the point of view of constructive mathematics they are inferior to the latter.
+In classical mathematics well-founded induction also goes by the names of \textit{strong induction}, \textit{complete induction}, \textit{Noetherian induction} and many others. There it is defined in one of two ways: the first definition states that a relation is well-founded when it has no infinite descending chains; the second says a relation on \m{A} is well-founded when all subsets of \m{A} have a minimal element. Classically all definitions of well-foundedness are equivalent, but from the point of view of constructive mathematics the classical ones are clearly inferior to the accessibility-based definition given in the previous paragraph.
 
 For example, the relation ``is shorter than'' on \m{list A}, which we will use in the listing below, is well-founded because all lists are accessible. This should be intuitively clear: the empty list is accessible because all shorter lists (of which there are none) are accessible; all singleton lists are accessible, because all shorter lists (i.e. just the empty list) are accessible; all lists of length two are accessible, because all lists of length $0$ and $1$ are accessible and so on.
 
@@ -1076,7 +1076,7 @@ The proof is very easy -- we introduce assumptions into context and proceed by f
 
 There is also yet another principle for reasoning about recursive functions that is not worth deriving, but which is nonetheless very easy to use in our current setup -- functional inversion. The need for functional inversion arises when we know the function's result and want to infer what arguments could have produced that result. Of course, when $f(x) = y$, then the set of all possible $x$s that could produce $y$ is $f^{-1}(y)$, the preimage of $y$ under $f$. But this is neither very useful nor what we usually want, particularly when dealing with recursive functions -- often we only want to know some basic facts about $x$, like which constructor it was made with.
 
-Functional inversion comes in handy in precisely these kinds of situations. Formulating a standalone functional inversion principle for a given function is a rather daunting task, wordy and clumsy (and it would most likely only obfuscate the matter at hand), but using such a principle is very simple. When we have a hypothesis \m{H : f x = y} and \m{R} is the inductively defined graph relation of \m{f}, we need to convert \m{H} to \m{H' : R x y} using the correctness lemma of the graph and then perform an \m{inversion} on \m{H'}. This results in a kind of ``taking one step back in the evaluation of \m{f}'', which exposes all the possible forms of \m{x} that could have made \m{f x} compute to \m{y} directly (i.e. in one step).
+Functional inversion comes in handy in precisely these kinds of situations. Formulating a standalone functional inversion principle for a given function is a rather daunting task, wordy and clumsy (and it would most likely only obfuscate the matter at hand), but using such a principle is very simple. When we have a hypothesis \m{H : f x = y} and \m{R} is the inductively defined graph relation of \m{f}, we need to convert \m{H} to \m{H' : R x y} by using the correctness lemma of the graph and then perform an \m{inversion} on \m{H'}. This results in a kind of ``taking one step back in the evaluation of \m{f}'', which exposes all the possible forms of \m{x} that could have made \m{f x} compute to \m{y} directly (i.e. in one step).
 
 Deriving the functional induction principle turned out to be pretty easy and it should be just as easy when applied with the variant of inductive domain method from section \ref{irrelevant}. Moreover, derivation of the principle can be easily automated (together with the the inductive domain method) in most situations, as we will see in section \ref{automate}.
 
@@ -1298,15 +1298,20 @@ To fill the remaining gaps, we will need some lemmas, shown in the listing above
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
-The finished correctness proofs are shown in the listing above. They are not terribly different from the initial versions. The only exceptions are that their are now stated using \m{VerifiedQSArgs} and they no longer contain any gaps. Also, the structure of the second proof changed a bit to reflect the fact that only two lemmas are needed now (as opposed to three \m{cut}s previously).
+The finished correctness proofs are shown in the listing above. They are not terribly different from the initial versions. The only exceptions are that their are now stated using \m{VerifiedQSArgs}, which makes them shorter, and they no longer contain any gaps. Also, the structure of the second proof changed a bit to reflect the fact that only two lemmas are needed now (as opposed to three \m{cut}s previously).
 
 \section{Sanity check -- concrete proofs} \label{sanity3}
 
-Before we finish our deliberations, we should also mention the idea of \textit{type-driven development} \cite{TypeDriven}, sometimes also called \textit{type-first development} \cite{TypeFirst} or \textit{typeful programming} \cite{Typeful}. Type-driven development is, as the name suggests, a way of using the type system to guide the programmer towards an implementation of the desired program. It can be contrasted with the usual way of utilizing the type system, in which the programmer writes the program first and only after finishing he asks the typechecker to help him find errors in the program.
+We are almost done with our formally correct quicksort. The last step that separates us from proclaiming total success is yet another sanity check -- we will have to provide concrete correctness proofs for the default implementation from section \ref{sanity2}. But before we do that, we will take our time to put all our sanity checks into a broader perspective. We will be especially interested in how they are related to hole-driven development and proof by admission as described in the \hyperref[byadmission]{previous section}.
 
-Type-driven development is usually realised by a kind of interaction between the programmer and his language's tooling, where the programmer talks to the system by writing types and programs fragments, and the system responds by synthesizing obvious programs that fit the given type (which is reminiscent of Coq's proof automation), refining the program (e.g. performing case splits) or providing the programmer with suggestions when there are more possible implementations, and typechecking the program fragments provided by the user.\footnote{A powerful type system (i.e. at least dependent types) is pretty much required for the typechecking to fit nicely into this process.}
+The crucial idea to be mentioned here is \textit{type-driven development} \cite{TypeDriven}, sometimes also called \textit{type-first development} \cite{TypeFirst} or \textit{typeful programming} \cite{Typeful}. Type-driven development is, as the name suggests, a way of using the type system to guide the programmer towards an implementation of the desired program. It can be contrasted with the usual way of utilizing the type system, in which the programmer writes the program first and only after finishing he asks the typechecker to help him find errors in the program.
 
-Type-driven development is championed by Idris and described in the book \cite{TypeDriven} by the language's creator, Edwin Brady. In Coq we can also use this approach as described above, at least as long as we stay in the proof mode. But if we squint a bit, we can see that what we did when defining the default concrete implementation of our algorithm was quite similar in nature. Indeed, when we are done with the correctness proof, the types of subroutines and their expected termination and correctness properties present in \m{VerifiedQSArgs} will turn out to be great at guiding users of our algorithm template towards defining their own concrete implementations.
+Type-driven development\footnote{Type-driven development is often shortened to TDD, but this acronym can also be expanded as \textit{Test-driven development}, an Agile technique popular among users of dynamically typed languages. In this thesis, TDD will always refer to type-driven development, however.} is championed by Idris and described in the book \cite{TypeDriven} by the language's creator, Edwin Brady. There it is realised by a kind of interaction between the programmer and the language's tooling, where the programmer talks to the system by writing types and programs fragments, and the system responds by synthesizing obvious programs that fit the given type (which is reminiscent of Coq's proof automation), refining the program (e.g. performing case splits) or providing the programmer with suggestions when there are more possible implementations, and typechecking the program fragments provided by the user.
+
+ In Coq we can also use this approach as described above, at least as long as we stay in the proof mode. Outside the proof mode, support for type-driven development seems missing, but it's still possible to practice it, even if only unconsciously and without tooling support. What we did in section \ref{sanity1}, when we defined the default concrete implementation of our algorithm, looks quite similar to TDD, at least if we squint a bit. The most noticeable difference is that in Idris, type-driven development is usually practiced using precise, dependently typed specifications, whereas our quicksort template consists only of simply typed components.
+
+
+Indeed, when we are done with the correctness proof, the types of subroutines and their expected termination and correctness properties present in \m{VerifiedQSArgs} will turn out to be great at guiding users of our algorithm template towards defining their own concrete implementations.
 
 As it turns out, hole-driven development, together with the idea of abstracting some holes away, naturally leads to type-driven development. They are intrinsically linked.
 
